# zynthian-ui

./: zynthian_main.py
zynautoconnect/: zynthian_autoconnect.py
zyngui/: zynthian_gui_config.py
zynlibs/zynaudioplayer/: CMakeLists.txt  player.cpp  zynaudioplayer.py
zynlibs/zynmixer/: CMakeLists.txt
zynlibs/zynseq/: CMakeLists.txt
